--- a/menu/templates/base.html
+++ b/menu/templates/base.html
@@ -1,3 +1,4 @@
+{% load tree_menu %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,11 +12,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    {% block menu %}
-
-    {% endblock %}
-
+  {% show_tree_items %}
     {% block content %}
 
     {% endblock %}
